fixed table aesthetic on about page, fixed the footer on the bottom of the screen, added footer to contact page

--- a/about.html
+++ b/about.html
@@ -11,6 +11,21 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.production.css">
     </head>
+
+
+
+    <style>
+      table {
+        border-collapse: collapse;
+        width: 60%;
+      }
+      
+      tr {
+        border-bottom: 1px solid #ddd;
+      }
+      tr:hover {background-color: lightgrey;}
+      </style>
+
     
 
 
@@ -70,7 +85,10 @@
             <p><a href="photogallery.html" >Here</a> is a link to a photo gallery of me doing what I love!</p>
 
             <h2>Here are some of my proficiencies so far!</h2>
-            <table class="skills">
+
+
+<div style="border: none">
+            <table>
                 <thead>
                   <tr>
                     <th>Skills</th>
@@ -96,7 +114,7 @@
                   </tr>
                 </tbody>
             </table> <br> <br> <br>
-
+</div>
 
 
             <!-- I don't think I'll end up keeping this button in the final draft, is that okay?-->
