--- a/contact.html
+++ b/contact.html
@@ -78,5 +78,17 @@
     </body>
 
 
+    <footer class="page__footer">
+      <p>Find me on</p>
+
+          <div style="border: none" class="social-media">
+           <img src="./img/github.svg" alt="Github logo"/>
+           <img src="./img/instagram.svg" alt="Instagram logo"/>
+           <img src="./img/slack.svg" alt="Slack logo"/><br>
+          </div>
+  </footer>
+
+
+
 
 </html>
