--- a/photogallery.html
+++ b/photogallery.html
@@ -48,6 +48,29 @@
 
 
 
+<div>
+   <h1>Hiking and Camping </h1>
+</div>
+
+
+<div>
+   <h1>Spending time with friends and family </h1>
+</div>
+
+
+<div>
+   <h1>Traveling </h1>  
+</div>
+
+
+<div>
+   <h1>Building a scrapbook! </h1>   
+</div>
+
+
+
+
+
 
 </body>
 </html>
