Tidied up the contact page

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 
             </ul>
 
-            <p><a href="photogallery.html" >Here</a> is a link to a photo gallery of me doing what I love!</p>
+            <p><a href="photogallery.html" >Here</a> is a link to a photo gallery of me doing what I love!</p><br><br><br>
 
             <h2>Here are some of my proficiencies so far!</h2>
 
