--- a/contact.html
+++ b/contact.html
@@ -43,19 +43,21 @@
         </header>
 
         <div>
-          <h1>This is my contact page</h1>
+          <h1>Here are some ways to contact me</h1>
 
-          Minneapolis,<br>
-          Minnesota<br>
+
+          Located in <br>
+          Minneapolis, Minnesota.<br>
           <br>
-          Tel <a href="tel:+123-456-7890" alt="The following is the listed phone number +123-456-7890 that would be the best to get a hold of me">Mobile: +123-456-7890</a><br>
-          Skype <a href="skype:hello.careerfoundry"> IDoNotHave.ASkype</a><br>
-          email <a href="mailto:office@careerfoundry.com">jettmberg(at)gmail(dot)com</a>
+          <br><br>
+          My number: <a href="tel:+123-456-7890" alt="The following is the listed phone number +123-456-7890 that would be the best to get a hold of me">mobile: +612-239-6172</a><br>
+          My Skype username: <a href="skype:hello.careerfoundry"> JettsFakeSkype.Askype</a><br>
+          My work email: <a href="mailto:jettmberg@gmail.com">jettmberg@gmail.com</a>
 
         </div>
 
         <div>
-          <a href="mailto:office@careerfoundry.com">Contact me</a>
+          <a href="mailto:office@careerfoundry.com">Contact me</a> and leave a message, i'll get back to you.<br><br>
 
 
         <form action="" method="post" id="contact-form">
