linked all pages to the production.css and updated all preprocessors and CSS variables

--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
         border-bottom: 1px solid #ddd;
       }
       tr:hover {background-color: lightgrey;}
+
+      td {
+  text-align: center;
+}
       </style>
 
     
