--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <link rel="stylesheet" type="text/css" href="css/style.production.css">
    </head>      
         
 
@@ -46,12 +46,12 @@
 
             <div class="profile">
 
-                <img src="./img/alaska_photo.JPG" width="200px" class="profile__portrait" alt="A photo of Jett Berg sitting infront of a scenic view in the mountains"/>
+                <img src="./img/alaska_photo.JPG" class="profile__portrait" alt="A photo of Jett Berg sitting infront of a scenic view in the mountains"/>
 
                 <div style="border: none">
                     <h1>Hello World!</h1>
                     <p>
-                    My name is Jett Berg. I am a <span>web</span> developer in training from Minnesota.
+                    My name is Jett Berg. I am a fullstack developer in training from Minnesota. This website is one of the first projects that I have worked on! Listed throughout are ways to get to know me, the projects that I have (and will) completed and a way to contact me if need be! <br> It's good to meet you!
                     </p>
 
 <!--Here is where i linked my work page. I opted to leave it only on my index page. Do I need to add it to my navigation links above? It links back to everything properly when you use it-->
